hard-gists/7716005/run.log
=== Docker Run Log for 7716005 ===
Started at: Mi 29. Okt 17:17:05 CET 2025

[2025-10-29 17:17:06] START: Running container for 7716005
[2025-10-29 17:17:06] SUCCESS: Container 95c85b4f555a8be1776848da48d9b1f37c90dde97555548de7b87a1565716b66 started for 7716005
=== Container logs for 7716005 ===
  File "/snippet.py", line 40
    print "Error loading URL: " + URL
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7716005 ===
[2025-10-29 17:17:08] INFO: Container 95c85b4f555a8be1776848da48d9b1f37c90dde97555548de7b87a1565716b66 has stopped
